# WindowRestore

./: Cargo.toml  README.md  REQUIREMENTS.md  TASK_SCHEDULE.md  build.rs  cbindgen.toml
.cargo/: config.toml
docs/: SWIFT_ONLY_SPEC.md  WINDOW_RESTORE_DESIGN.md
mac-app/: Package.swift
mac-app/.clang_module_cache/131DQ4SYTXGMT/: SwiftShims-UTLVU43OQQS4.pcm  _SwiftConcurrencyShims-UTLVU43OQQS4.pcm
mac-app/.clang_module_cache/29J9V98IL5IVF/: SwiftShims-UTLVU43OQQS4.pcm  _SwiftConcurrencyShims-UTLVU43OQQS4.pcm
mac-app/.clang_module_cache/2M3PIGEENVEKW/: SwiftShims-UTLVU43OQQS4.pcm
mac-app/Bridging/: module.modulemap  window_restore.h
mac-app/Sources/: AppDelegate.swift  FileHelper.swift  LayoutSelector.swift  MenuController.swift  PermissionManager.swift  QuitWindow.swift  RustAPI.swift  WindowManager.swift
mac-app/Sources/Resources/: README.txt
mac-app/Sources/mac-app/: AppDelegate.swift  FFIHelpers.swift  MenuController.swift  SettingsWindow.swift  main.swift  module.modulemap
mac-app/mac-app/: Package.swift
mac-app/mac-app/Sources/mac-app/: mac_app.swift
scripts/: make_app.sh
src/: app_launcher.rs  config.rs  display_manager.rs  ffi.rs  layout_manager.rs  lib.rs  main.rs  notification.rs  permission_checker.rs  window_restorer.rs  window_scanner.rs
tests/: integration_tests.rs  unit_tests.rs
