[package]
name = "window_restore"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "macOS window position and size restoration utility"
license = "MIT"
repository = "https://github.com/yourusername/window_restore"

[lib]
name = "window_restore"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
core-graphics = "0.23"
objc = "0.2"
cocoa = "0.25"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"

[build-dependencies]
cbindgen = "0.26"
